tests/cases/should_fail/misc/malformed_function_literal_arrow.stderr
error: unexpectedly encountered a `=`
 --> $DIR/malformed_function_literal_arrow.hash:1:36
1 |   str_eq: (str, str) -> str = (a, b) = a == b;
  |                                      ^ here
  = help: consider adding a `;`
